--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -3,5 +3,8 @@
 ### 二 地图
 ### 三 武将
 ### 四 武器
+| 武器名  | 0 | 1 | 2 | 3 | 4 | 5 | 溅 |  花费  |
+|--------|---|---|---|---|---|---|----|-------|
+|RPG| | | | | | | 5 | 1G |
 ### 五 高阶操作
 ### 六 参数对照表
