--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -1,10 +1,65 @@
 ### 零 绪论
+>第零部分是纪念部分，只想了解游戏规则的读者可以跳过
+#### 0.1 创立与发展
+#### 0.2 游戏理念
+#### 0.3 传播范围与变式
+#### 0.4 历史意义
+
 ### 一 流程
+#### 1.1 游戏开始
+##### 1.1.1 选将
+##### 1.1.2 选取武器
+##### 1.1.3 执行技能
+#### 1.2 回合
+##### 1.2.1 移动
+##### 1.2.2 发动技能
+##### 1.2.3 发动攻击
+##### 1.2.4 空步
+##### 1.2.5 移动顺序
+##### 1.2.6 操作顺序
+#### 1.3 结算
+
 ### 二 地图
+#### 2.1 图形
+#### 2.2 基本概念
+##### 2.2.1 “步”、“格”与$\sqrt{2}$
+##### 2.2.2 视域
+#### 2.3 特殊区域
+##### 2.3.1 中央区
+##### 2.3.2 经济区
+##### 2.3.3 塔区
+##### 2.3.4 铁路
+
 ### 三 武将
+#### 3.1 基本参数
+##### 3.1.1 HP（健康值）
+##### 3.1.2 极值与性别
+##### 3.1.3 数学
+##### 3.1.4 所属班级
+#### 3.2 技能
+##### 3.2.1 发动条件
+##### 3.2.2 作用效果
+##### 3.3.3 cd（冷却）
+##### 3.3.4 三种特殊技能
+###### 3.3.4.1 极值点偏移
+###### 3.3.4.2 数竞
+###### 3.3.4.3 医疗
+##### 3.3.5 具有特殊属性的技能
+
 ### 四 武器
-| 武器名  | 0 | 1 | 2 | 3 | 4 | 5 | 溅 |  花费  |
-|--------|---|---|---|---|---|---|----|-------|
-|RPG| | | | | | | 5 | 1G |
+#### 4.1 三种武器的介绍
+#### 4.2 关于“溅射”
+#### 4.3 关于“经济”
 ### 五 高阶操作
+>本部分是提升玩家游戏操作水平的指南。对于理解游戏规则而言，读者可以跳过这一部分。
+
 ### 六 参数对照表
+#### 6.1 武将-参数-技能表
+#### 6.2 武器参数表
+#### 6.3 偏移倍数表
+
+### 七 游戏用语对照表
+
+---
+### 八 开发者板块
+>以下内容不向用户公开
