--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -1,5 +1,5 @@
 ### 零 绪论
->第零部分是纪念部分，只想了解游戏规则的读者可以跳过
+>第零部分是纪念部分，只想了解游戏规则的读者可以跳过。
 #### 0.1 创立与发展
 #### 0.2 游戏理念
 #### 0.3 传播范围与变式
@@ -33,7 +33,7 @@
 ### 三 武将
 #### 3.1 基本参数
 ##### 3.1.1 HP（健康值）
-##### 3.1.2 极值与性别
+##### 3.1.2 极值
 ##### 3.1.3 数学
 ##### 3.1.4 所属班级
 #### 3.2 技能
@@ -55,10 +55,41 @@
 
 ### 六 参数对照表
 #### 6.1 武将-参数-技能表
+|武将|HP|极值|数学|班级/身份|技能|
+|---|---|---|---|---|---|
+|Birdman|110|5|强|5|【制导】使用RPG/M202打击3步以内的敌人时，弹道可以转钝角或直角弯，**cd=1**|
+|LYJ|125|2|神|5|【数竞】B类，**cd=1**|
+|...|...|...|...|...|...|
 #### 6.2 武器参数表
+|步数|0|1|2|3|4|5|6及6+|溅射1|溅射$\sqrt{2}$|经济|
+|---|---|---|---|---|---|---|---|---|---|---|
+|M202|50|35|30|25|25|20|15|10|7|2|
+|RPG|30|25|25|20|20|15|10|5|3|1|
+|加特林|40|35|20|20|15|10|10|0|0|0|
 #### 6.3 偏移倍数表
+|步数|0|1|2|3|4|5|6及6+|
+|---|---|---|---|---|---|---|---|
+|倍数|5|5|4|4|3|3|2.5|
+
+偏移计算公式：$\text{伤害 = 偏移倍数} \times \Delta \text{极值}$
+示例：581在2步处偏移YL：
+$\text{伤害} = 4 \times (10-0) = 40$
+
+#### 6.4 数竞类型表
+|敌人数学属性|神|巨|强|中|弱|
+|---|---|---|---|---|---|
+|A类：LSY|-0|-5|-15|-25|-35|
+|B类：LYJ|-0|-0|-10|-20|-30|
+|C类：花花|-0|-0|-5|-15|-25|
+|Al只因翔's 误导|-10|-20|-30|-0|-0|
 
 ### 七 游戏用语对照表
+|游戏社群黑话|原来的名词或解释|
+|---|---|
+|极值点|可能指代有【偏移】技能的武将，也可能指代“经济”|
+|弹药/**G**|一般指代“经济”|
+|主战场/正面战场|一般指代“中央区”|
+|...|...|
 
 ---
 ### 八 开发者板块
