--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -57,8 +57,10 @@
 #### 6.1 武将-参数-技能表
 |武将|HP|极值|数学|班级/身份|技能|
 |---|---|---|---|---|---|
-|Birdman|110|5|强|5|【制导】使用RPG/M202打击3步以内的敌人时，弹道可以转钝角或直角弯，**cd=1**|
-|LYJ|125|2|神|5|【数竞】B类，**cd=1**|
+| Birdman | 110 | 5 | 强 | 5 |【制导】```使用RPG/M202打击3步以内的敌人时，弹道可以转钝角或直角弯```，**cd=1**|
+| LYJ | 125 | 2 | 神 | 5 |【数竞】B类，**cd=1**|
+| 581 | 100 | 11 | 弱 | 6 | 【医疗】对**当前存活**的```5班角色+45,强极值点+15,其他人+30``` ，**全局限3次** |
+| 582 | 100 | 11 | 中 | ```其他班学生``` | 【瞬移】 **全局限2次**，**cd=1** |
 |...|...|...|...|...|...|
 #### 6.2 武器参数表
 |步数|0|1|2|3|4|5|6及6+|溅射1|溅射 $\sqrt{2}$ |经济|
