--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -32,12 +32,19 @@
 
 ### 三 武将
 #### 3.1 基本参数
+武将的基本参数（属性）有HP、极值、数学等。
 ##### 3.1.1 HP（健康值）
+武将的HP等于初始值记为满血，原则上，不得顶格加血（超过满血）；HP小于或等于0时，武将死亡。武将可以通过发动技能或者使用主武器来扣除敌人的HP，医疗兵通过发动【医疗】技能增加自己或队友的HP。
 ##### 3.1.2 极值
+武将的极值一般仅用于计算【偏移】技能造成的伤害。将极值大于等于7小于等于14的雌性角色称为“极值点”。其中，极值为7或8的是弱极值点，9或10的是强极值点，11\~14的是超极值点。一般地，雌性角色的初始极值为5\~11，雄性角色的初始极值为0~5。武将ZYS由于其独特的【雌偏移】技能而将极值设定为15。特别地，SJK的极值是虚数 $i$ 。这也就意味着他无视极值点【偏移】。
+一般地，除特殊技能外，武将的极值在局中无法改变。
 ##### 3.1.3 数学
+武将的数学分为神、巨、强、中、弱五档。常用于判定【数竞】带来的伤害或数学属性医疗兵发动【医疗】的条件。
 ##### 3.1.4 所属班级
+某些技能可能对班级的不同产生不同的效果，如581的【医疗】技能。
 #### 3.2 技能
 ##### 3.2.1 发动条件
+技能的发动时机可能在整局游戏开始前的准备阶段（例如：TSD的【晋升】），也可能在回合内（如【偏移】【数竞】等大部分主要技能），还有可能在回合外（如一些被动技能）。在发动条件成立时，被动技能立即发动，主动技能则由玩家决定是否发动。
 ##### 3.2.2 作用效果
 ##### 3.3.3 cd（冷却）
 ##### 3.3.4 三种特殊技能
