--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -63,6 +63,7 @@
 ### 六 参数对照表
 #### 6.1 武将-参数-技能表
 > 道路连通:指两点间有线连接
+- ↓表1 武将-参数-技能表↓
 |武将|HP|极值|数学|班级/身份|技能|
 |---|---|---|---|---|---|
 | Birdman | 110 | 5 | 强 | 5 |【制导】```使用RPG/M202打击3步以内的敌人时，弹道可以转钝角或直角弯```，**cd=1**|
