--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -72,7 +72,7 @@
 | 581 | 100 | 11 | 弱 | 6 | 【医疗】对**当前存活**的```5班角色+45,强极值点+15,其他人+30``` ，**全局限3次** |
 | 582 | 100 | 11 | 中 | ```其他班学生``` | 【瞬移】 **全局限2次**，**cd=1** |
 | 583 | 100 | 10 | 强 | 6 | 【次声】对 $r<2$ 且**道路连通**的所有**敌对武将**产生r=0```40```r=1```30```r= $\sqrt{2}$ ```20```伤害 |
-| YR | 150 | 0 | 弱 |```5教师```| 【约谈】**被动技**可在```所有己方武将行动之前```对上一回合对自己造成伤害的**任意敌对**武将约谈到 $r<=1$ 且**道路连通**的任意地点|
+| YR | 150 | 0 | 弱 |```5教师```| 【约谈】**（不占步数）**可在```所有己方武将行动之前```对上一回合对自己造成伤害的**任意敌对**武将约谈到 $r<=1$ 且**道路连通**的任意地点|
 | DXD | 135 | 2 | 弱 |```5外教师```|【晋升】```第一回合前对己方一武将使用,使其数学+1/极值+2```【劝人选文】```对3步内一敌对武将使用,使其数学-1,极值+1```**全局限3次**|
 |...|...|...|...|...|...|
 #### 6.2 武器参数表
