--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -44,12 +44,25 @@
 某些技能可能对班级的不同产生不同的效果，如581的【医疗】技能。
 #### 3.2 技能
 ##### 3.2.1 发动条件
+技能的发动条件包括发动时机、作用对象、cd、次数限制、经济限制等
 技能的发动时机可能在整局游戏开始前的准备阶段（例如：TSD的【晋升】），也可能在回合内（如【偏移】【数竞】等大部分主要技能），还有可能在回合外（如一些被动技能）。在发动条件成立时，被动技能立即发动，主动技能则由玩家决定是否发动。
 ##### 3.2.2 作用效果
+一般地，一个技能的作用效果可以分为以下几类：伤害类、医疗类、属性类、位移类、特效类等。
+伤害类是指直接扣除作用对象的HP，同时又分为点对点（如：【偏移】）、点对面（如：【次声】）两类。
+医疗类是指恢复作用对象的HP，一般专指【医疗】技能。
+属性类是指修改作用对象的属性，例如DXD的【晋升】和【劝人选文】。特别地，有些技能可以改变自己的机动性，也算做对属性的修改。
+位移类是指造成作用对象发生额外位移，比较典型的有【足球】、【约谈】和【瞬移】。
 ##### 3.3.3 cd（冷却）
+为保持游戏平衡，部分技能不能在连续的回合中发动，被标注cd=x（x是一个正整数，一般为1）。cd=x表示从一次发动技能到下一次发动技能之间，必须相隔x个完整的回合。
 ##### 3.3.4 三种特殊技能
 ###### 3.3.4.1 极值点偏移
+【偏移】是极值点特有的技能。除特殊标注外，所有极值≥7的雌性角色均拥有技能【偏移】。【偏移】的作用对象仅限视域内的雄性角色，且消耗G*1，cd=1。
+偏移造成伤害的计算公式为： $\text{伤害 = 偏移倍数} \times \Delta \text{极值}$
+其中， $\Delta 极值$ 的意思是技能发动者的极值减去作用对象的极值。
+示例：581在2步处偏移YL：
+ $\text{伤害} = 4 \times (11-0) = 44$
 ###### 3.3.4.2 数竞
+
 ###### 3.3.4.3 医疗
 ##### 3.3.5 具有特殊属性的技能
 
