--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -87,13 +87,17 @@
 | 583 | 100 | 10 | 强 | 6 | 【次声】对 $r<2$ 且**道路连通**的所有**敌对武将**产生r=0```40```r=1```30```r= $\sqrt{2}$ ```20```伤害 |
 | YR | 150 | 0 | 弱 |```5教师```| 【约谈】**（不占步数）**可在```所有己方武将行动之前```对上一回合对自己造成伤害的**任意敌对**武将约谈到 $r<=1$ 且**道路连通**的任意地点|
 | DXD | 135 | 2 | 弱 |```5外教师```|【晋升】```第一回合前对己方一武将使用,使其数学+1/极值+2```【劝人选文】```对3步内一敌对武将使用,使其数学-1,极值+1```**全局限3次**|
+| Fakeflower| 100 | 6 | 巨 |```5教师```|【医疗】对**当前存活**的```神+45,巨+30,强+15``` 【数竞】C类,**cd=1**|
+| SJK | 130 | $i$ | 神 |```5外教师```| 免疫**劝人选文** |
+| An | 125 | 5 | 巨 |```5教师```| 【An】```对所有敌对武将加伤 中20% 弱50%```**特别的**,当为强时```加伤弱20%```,为中弱时**失去加伤**|
+| Office | 100 | 6 | 弱 |```5教师```| 【CTMO】**第一回合**前```在场上任意位置设立OFFICE,可将视域内一名敌对武将移动到OFFICE```**cd=2**,**全局限3次**|
 |...|...|...|...|...|...|
 #### 6.2 武器参数表
-|步数|0|1|2|3|4|5|6及6+|溅射1|溅射 $\sqrt{2}$ |经济|
-|---|---|---|---|---|---|---|---|---|---|---|
-|M202|50|35|30|25|25|20|15|10|7|2|
-|RPG|30|25|25|20|20|15|10|5|3|1|
-|加特林|40|35|20|20|15|10|10|0|0|0|
+|步数|0|1|2|3|4|5|6及6+|溅射1|溅射 $\sqrt{2}$ |经济(开火时)|经济(制备时)|
+|---|---|---|---|---|---|---|---|---|---|---|---|
+|M202|50|35|30|25|25|20|15|10|7|2|2|
+|RPG|30|25|25|20|20|15|10|5|3|1|1|
+|加特林|40|35|20|20|15|10|10|0|0|0|2|
 #### 6.3 偏移倍数表
 |步数|0|1|2|3|4|5|6及6+|
 |---|---|---|---|---|---|---|---|
