--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -15,7 +15,7 @@
 ##### 1.2.2 发动技能
 ##### 1.2.3 发动攻击
 ##### 1.2.4 空步
-##### 1.2.5 移动顺序
+##### 1.2.5 更换主武器
 ##### 1.2.6 操作顺序
 #### 1.3 结算
 
@@ -34,7 +34,7 @@
 #### 3.1 基本参数
 武将的基本参数（属性）有HP、极值、数学等。
 ##### 3.1.1 HP（健康值）
-武将的HP等于初始值记为满血，原则上，不得顶格加血（超过满血）；HP小于或等于0时，武将死亡。武将可以通过发动技能或者使用主武器来扣除敌人的HP，医疗兵通过发动【医疗】技能增加自己或队友的HP。
+武将的HP等于初始值记为满血，原则上，不得顶格加血（超过满血）；HP小于或等于0时，武将死亡。武将可以通过发动技能或者使用主武器来扣除敌人的HP，医疗兵通过发动【医疗】技能增加自己或队友的HP。对于一次HP的扣除，将武器使用者/技能发动者视为“伤害来源”。
 ##### 3.1.2 极值
 武将的极值一般仅用于计算【偏移】技能造成的伤害。将极值大于等于7小于等于14的雌性角色称为“极值点”。其中，极值为7或8的是弱极值点，9或10的是强极值点，11\~14的是超极值点。一般地，雌性角色的初始极值为5\~11，雄性角色的初始极值为0~5。武将ZYS由于其独特的【雌偏移】技能而将极值设定为15。特别地，SJK的极值是虚数 $i$ 。这也就意味着他无视极值点【偏移】。
 一般地，除特殊技能外，武将的极值在局中无法改变。
@@ -56,16 +56,17 @@
 为保持游戏平衡，部分技能不能在连续的回合中发动，被标注cd=x（x是一个正整数，一般为1）。cd=x表示从一次发动技能到下一次发动技能之间，必须相隔x个完整的回合。
 ##### 3.3.4 三种特殊技能
 ###### 3.3.4.1 极值点偏移
-【偏移】是极值点特有的技能。除特殊标注外，所有极值≥7的雌性角色均拥有技能【偏移】。【偏移】的作用对象仅限视域内的雄性角色，且消耗G*1，cd=1。
+【偏移】是极值点特有的伤害类技能。除特殊标注外，所有极值≥7的雌性角色均拥有技能【偏移】。【偏移】的作用对象仅限视域内的雄性角色，且消耗G*1，cd=1。
 偏移造成伤害的计算公式为： $\text{伤害 = 偏移倍数} \times \Delta \text{极值}$
 其中， $\Delta 极值$ 的意思是技能发动者的极值减去作用对象的极值。
 示例：581在2步处偏移YL：
  $\text{伤害} = 4 \times (11-0) = 44$
 ###### 3.3.4.2 数竞
-
+【数竞】是一些具有特殊“数学”关联的武将的特有的越视域技能。对于3步内的敌人，若敌人的数学属性满足一定条件（通常是强、中、弱），则可以扣除其一定值HP，参照下文中的数竞类型表。特别地，Al只因翔拥有【误导】技能，虽然和【数竞】的设计逻辑不同，但作用方法和效果相似，所以也归为【数竞】类别当中。
 ###### 3.3.4.3 医疗
+【医疗】是可以恢复己方一名武将HP值的技能。将具有【医疗】技能或其他恢复HP功能的武将称为“医疗兵”。一般地，不同医疗兵的医疗触发条件不同，例如对作用对象的特定属性和身份有一定限制或区分。【医疗】不可以顶格加血，即不可以使得任何武将的HP超过其初始状态；若作用对象的HP与初始HP差值小于【医疗】技能使其HP增加的值，则将该作用对象加至满血（初始HP）。一般地，医疗技能全局限3次，无cd。
 ##### 3.3.5 具有特殊属性的技能
-
+部分技能可能具有特殊属性，如蒜的【蒜】技能可以放置【蒜】，HJK的技能可能导致其具有特殊的主武器等。这些技能可能改变初始规则，需要格外关注。
 ### 四 武器
 #### 4.1 三种武器的介绍
 #### 4.2 关于“溅射”
