--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -7,9 +7,17 @@
 
 ### 一 流程
 #### 1.1 游戏开始
+当玩家准备好地图后，游戏开始。游戏开始到第一回合开始进行之间的阶段称作“准备阶段”。
 ##### 1.1.1 选将
+准备阶段初期，双方（以下称作红方、蓝方）各自选择武将，具体流程为：
+1. 红方和蓝方同时选择主将，一旦选择，直接确定。如果重复，则双方各自重选，且不能再次选择原来的主将。
+2. 红方和蓝方同时禁止对方一个武将，可以相同。
+3. 红方和蓝方同时再选择四个武将；如果相同，则双方各自重选，且不能再次选择原来的武将，但可以选择之前因为重复而被禁止的主将。
+4. 选完武将后，双方各获得15经济。
 ##### 1.1.2 选取武器
+双方可以消耗一定的经济，为武将选择主武器。每个武将可以持有0~1个主武器。此阶段每个队伍最多持有1个M202。双方均确定主武器后，可以互相查看对方的主武器。
 ##### 1.1.3 执行技能
+一些在准备阶段发动的技能可以在选择主武器后发动，例如DXD的【晋升】技能。
 #### 1.2 回合
 ##### 1.2.1 移动
 ##### 1.2.2 发动技能
