--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -19,14 +19,30 @@
 ##### 1.1.3 执行技能
 一些在准备阶段发动的技能可以在选择主武器后发动，例如DXD的【晋升】技能。
 #### 1.2 回合
+唔叭荣耀是一款回合制自走棋游戏，每一回合包括己方的回合和对方的回合。在回合中，玩家可以自选顺序操作自己的所有武将，每个武将操作1次。“操作”包括：移动、发动技能、发动攻击、空步和更换主武器。当武将选择一个操作之后，不能再次操作。
 ##### 1.2.1 移动
+“移动”是回合中的一般操作。在一般的区域内，玩家可以向有道路联通的任意方向移动1步（1格或 $\sqrt{2}$ 格）；若位移的起点和终点都在中央区，则可以无视地形进行 $\sqrt{2}$ 格位移；在铁路区域内，玩家可以移动1~2格，或者在铁路与常规区域选择上/下车。
 ##### 1.2.2 发动技能
+武将可以在此期间发动技能，必须按照技能的规则和说明进行，详见下文3.2部分。
 ##### 1.2.3 发动攻击
+武将可以使用主武器对敌人或塔造成伤害，消耗一定的经济。此时，该武将被视为“伤害来源”。
 ##### 1.2.4 空步
+武将也可以选择不进行任何操作，称为“空步”。我们将“空步”视为一种操作，因为在对局中巧妙的空步可以最大化地限制对手。
 ##### 1.2.5 更换主武器
-##### 1.2.6 操作顺序
+武将可以消耗1步数将主武器交给3步以内的队友，则除非队友同时也消耗1步数将自己的主武器交给该武将，否则该武将将暂时没有主武器。武将也可以在局中某回合消耗1步数和一定经济制备主武器。
+##### 1.2.6 不耗步数的操作
+不耗步数的操作包括特定技能的发动（以标注为准）以及在经济区获取经济。
+在经济区获取经济的规则如下：
+1. 若玩家操作武将在经济区中空步或位移的终点在经济区，则该玩家一方获得2经济。地图上有两个经济区，不同经济区的经济可以累加。
+2. 若玩家一方有多名武将占据了同一个经济区，则不累加。
+3. 若玩家和敌方双方占据了同一个经济区，则各获得1经济。
+##### 1.2.7 操作顺序
+玩家可以自己决定五名武将的先后操作顺序。玩家应当格外注意，这一顺序有可能造成“溅射”等影响，可能在不经意间改变局势。
 #### 1.3 结算
-
+当场上满足以下两条件之一：
+1. 某一方所有武将死亡；
+2. 某一方两个塔的Hp均小于等于0。
+则该玩家判负，对方判胜。
 ### 二 地图
 #### 2.1 图形
 #### 2.2 基本概念
@@ -60,6 +76,7 @@
 医疗类是指恢复作用对象的HP，一般专指【医疗】技能。
 属性类是指修改作用对象的属性，例如DXD的【晋升】和【劝人选文】。特别地，有些技能可以改变自己的机动性，也算做对属性的修改。
 位移类是指造成作用对象发生额外位移，比较典型的有【足球】、【约谈】和【瞬移】。
+技能作用效果与常规游戏规则出现冲突的，一般以技能作用效果为准。
 ##### 3.3.3 cd（冷却）
 为保持游戏平衡，部分技能不能在连续的回合中发动，被标注cd=x（x是一个正整数，一般为1）。cd=x表示从一次发动技能到下一次发动技能之间，必须相隔x个完整的回合。
 ##### 3.3.4 三种特殊技能
@@ -76,9 +93,10 @@
 ##### 3.3.5 具有特殊属性的技能
 部分技能可能具有特殊属性，如蒜的【蒜】技能可以放置【蒜】，HJK的技能可能导致其具有特殊的主武器等。这些技能可能改变初始规则，需要格外关注。
 ### 四 武器
-#### 4.1 三种武器的介绍
-#### 4.2 关于“溅射”
-#### 4.3 关于“经济”
+主武器包括M202、RPG、加特林。使用主武器时，武将和作用点必须站在连通的直线上，且消耗一定量的经济，造成一定范围的溅射。“溅射”是指当主武器（M202、RPG）击中作用点时，对与作用点**直接相连**的r<2的点上的武将（包括敌人和队友）都会造成较小的伤害。不要小看这些伤害，在一次战例中，QC凭借5Hp的溅射以一个回合的优势推倒了583把守的塔，获得胜利。
+M202是“四联火箭筒”，可以进行对某个点的爆炸伤害（即作用点上的所有武将均会受伤），适合打击中远距离目标。BM配M202几乎无解。制备需要2经济，每次开火需要2经济。会造成较大溅射。
+RPG是M202的平替，可以进行对某个点的爆炸伤害，打击中距离目标性价比极高。医疗兵或者辅助型武将适合拿这一类武器。制备需要1经济，每次开火需要1经济。会造成较小溅射。
+加特林是机枪，只能进行一对一伤害，打击近距离或贴脸敌人威力极大，且极省经济。缺点是缺乏远程有效保护。一些坦克或者极强的机动兵，如YL、SJK或者thraa，非常适合配加特林。
 ### 五 高阶操作
 >本部分是提升玩家游戏操作水平的指南。对于理解游戏规则而言，读者可以跳过这一部分。
 
@@ -135,3 +153,82 @@
 ---
 ### 八 开发者板块
 >以下内容不向用户公开
+
+BDM_0415 我找到了一种可行的地图绘制算法，但还不知道怎么和武将对接。
+```python
+import matplotlib.pyplot as plt 
+import numpy as np 
+import math 
+ 
+class GridPlotter:
+    def __init__(self, size=8):
+        self.size = size 
+        self.total_points = size * size 
+        self.fig, self.ax = plt.subplots(figsize=(10, 10))
+        self.setup_grid()
+        
+    def setup_grid(self):
+        """设置网格基本参数"""
+        self.ax.set_xlim(0, self.size)
+        self.ax.set_ylim(0, self.size)
+        self.ax.set_aspect('equal')
+        self.ax.set_xticks([])
+        self.ax.set_yticks([])
+        
+    def plot_points(self):
+        """绘制点阵并标注编号"""
+        point_number = 1 
+        self.point_coords = {}  # 存储点编号到坐标的映射 
+        
+        for row in range(self.size, 0, -1):  # 从上到下 
+            for col in range(1, self.size + 1):  # 从左到右 
+                x, y = col - 0.5, row - 0.5  # 点中心坐标 
+                self.ax.plot(x, y, 'ko', markersize=8)  # 绘制黑点 
+                self.ax.text(x, y, str(point_number), 
+                           ha='center', va='center', 
+                           fontsize=10, color='white')
+                self.point_coords[point_number] = (x, y)
+                point_number += 1 
+                
+    def connect_points(self, x, y, color='black', linewidth=2):
+        """
+        连接两点 
+        参数:
+            x, y: 要连接的两点编号(1-64)
+            color: 线颜色('red', 'blue', 'black'等)
+            linewidth: 线宽 
+        """
+        if x not in self.point_coords or y not in self.point_coords:
+            raise ValueError("点编号必须在1-64范围内")
+            
+        coord1 = self.point_coords[x]
+        coord2 = self.point_coords[y]
+        
+        # 计算两点距离 
+        distance = math.sqrt((coord1[0]-coord2[0])**2 + (coord1[1]-coord2[1])**2)
+        if distance > math.sqrt(2) + 0.1:  # 添加小容差 
+            print(f"警告: 点{x}和点{y}的距离({distance:.2f})超过√2，可能不符合要求")
+        
+        self.ax.plot([coord1[0], coord2[0]], [coord1[1], coord2[1]], 
+                    color=color, linewidth=linewidth)
+        
+    def show(self, title="8×8点阵 (编号1-64)"):
+        """显示图形"""
+        plt.title(title, pad=20)
+        plt.tight_layout()
+        plt.show()
+ 
+# 使用示例 
+if __name__ == "__main__":
+    # 创建点阵 
+    plotter = GridPlotter()
+    plotter.plot_points()
+    
+    # 示例连接一些点 
+    plotter.connect_points(1, 2, color='red')    # 水平连接 
+    plotter.connect_points(1, 9, color='blue')   # 垂直连接 
+    plotter.connect_points(1, 10, color='black') # 对角线连接 
+    
+    # 显示图形 
+    plotter.show()
+```
