--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -45,6 +45,9 @@
 则该玩家判负，对方判胜。
 ### 二 地图
 #### 2.1 图形
+唔叭荣耀地图由98个点和点之间的线（通路）组成，如下图所示。
+![唔叭荣耀地图](https://github.com/BukSeong/58Glory/blob/main/Campus.png)
+其中，黑色区域为普通区域，蓝色区域为中央区，绿框为经济区，紫框为塔，红色区域为铁路区。
 #### 2.2 基本概念
 ##### 2.2.1 “步”、“格”与 $\sqrt{2}$
 ##### 2.2.2 视域
