--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -29,7 +29,7 @@
 ##### 1.2.4 空步
 武将也可以选择不进行任何操作，称为“空步”。我们将“空步”视为一种操作，因为在对局中巧妙的空步可以最大化地限制对手。
 ##### 1.2.5 更换主武器
-武将可以消耗1步数将主武器交给3步以内的队友，则除非队友同时也消耗1步数将自己的主武器交给该武将，否则该武将将暂时没有主武器。武将也可以在局中某回合消耗1步数和一定经济制备主武器。
+武将可以消耗1步数将主武器交给3步以内的队友，使得队友手上的主武器被替换，则除非队友同时也消耗1步数将自己原有的主武器交给该武将，否则该武将将暂时没有主武器，且原有主武器作废。武将也可以在局中某回合消耗1步数和一定经济制备主武器。
 ##### 1.2.6 不耗步数的操作
 不耗步数的操作包括特定技能的发动（以标注为准）以及在经济区获取经济。
 在经济区获取经济的规则如下：
@@ -42,6 +42,7 @@
 当场上满足以下两条件之一：
 1. 某一方所有武将死亡；
 2. 某一方两个塔的Hp均小于等于0。
+
 则该玩家判负，对方判胜。
 ### 二 地图
 #### 2.1 图形
@@ -51,9 +52,9 @@
 #### 2.2 基本概念
 为描述方便，将以x为编号的点简称为“点x”或“x点”；将以a点为左上顶点、以b点为右下顶点的矩形记作(a:b)，以a、b点为端点的线段记为(a,b)。
 ##### 2.2.1 “步”、“格”与 $\sqrt{2}$
-由长度为1或 $\sqrt{2}$ 的线段直接相连的两点，视为间隔1步。由最少个数（记为n）的这样的线段首尾相接连起来的两点，视为间隔n步。示例：图中的67点和89点，间隔3步。
-两点之间的曼哈顿距离称为“格”。示例：图中的67点和89点，间隔4格。
-两点之间由勾股定理算出来的绝对距离，称为“距离”。例如：68和59两点之间的距离是 $sqrt{2}$ 。一般在讨论距离时，不会讨论 $\sqrt{2}$ 以外的无理数。有时在游戏中为了方便，在讨论 $\sqrt{2}$ 时将“距离”和“格”的概念混淆（例如：有时会说点68到点59间隔 $\sqrt{2}$ 格）。
++ 由长度为1或 $\sqrt{2}$ 的线段直接相连的两点，视为间隔1步。由最少个数（记为n）的这样的线段首尾相接连起来的两点，视为间隔n步。示例：图中的67点和89点，间隔3步。
++ 两点之间的曼哈顿距离称为“格”。示例：图中的67点和89点，间隔4格。
++ 两点之间由勾股定理算出来的绝对距离，称为“距离”。例如：68和59两点之间的距离是 $sqrt{2}$ 。一般在讨论距离时，不会讨论 $\sqrt{2}$ 以外的无理数。有时在游戏中为了方便，在讨论 $\sqrt{2}$ 时将“距离”和“格”的概念混淆（例如：有时会说点68到点59间隔 $\sqrt{2}$ 格）。
 ##### 2.2.2 视域
 如果两点均属于铁路区或均不属于铁路区，且两点重合或有一条笔直的线段相连，则称其中一点在另一点的视域内。例如：12点在42的视域内，42点在38点的视域内，15点不在16点视域内，6点在1点视域内，6点不在16点视域内。
 #### 2.3 特殊区域
@@ -74,7 +75,7 @@
 ##### 3.1.1 HP（健康值）
 武将的HP等于初始值记为满血，原则上，不得顶格加血（超过满血）；HP小于或等于0时，武将死亡。武将可以通过发动技能或者使用主武器来扣除敌人的HP，医疗兵通过发动【医疗】技能增加自己或队友的HP。对于一次HP的扣除，将武器使用者/技能发动者视为“伤害来源”。
 ##### 3.1.2 极值
-武将的极值一般仅用于计算【偏移】技能造成的伤害。将极值大于等于7小于等于14的雌性角色称为“极值点”。其中，极值为7或8的是弱极值点，9或10的是强极值点，11\~14的是超极值点。一般地，雌性角色的初始极值为5\~11，雄性角色的初始极值为0~5。武将ZYS由于其独特的【雌偏移】技能而将极值设定为15。特别地，SJK的极值是虚数 $i$ 。这也就意味着他无视极值点【偏移】。
+武将的极值一般仅用于计算【偏移】技能造成的伤害。将极值大于等于7小于等于14的雌性角色称为“极值点”。其中，极值为7或8的是弱极值点，9或10的是强极值点，11\~14的是超极值点。一般地，雌性角色的初始极值为5\~11，雄性角色的初始极值为0~5。武将ZYS由于其独特的【雌偏移】技能而将极值设定为15（因此，ZYS原有的【偏移】技能被禁用）。特别地，SJK的极值是虚数 $i$ 。这也就意味着他无视极值点【偏移】。
 一般地，除特殊技能外，武将的极值在局中无法改变。
 ##### 3.1.3 数学
 武将的数学分为神、巨、强、中、弱五档。常用于判定【数竞】带来的伤害或数学属性医疗兵发动【医疗】的条件。
@@ -83,7 +84,7 @@
 #### 3.2 技能
 ##### 3.2.1 发动条件
 技能的发动条件包括发动时机、作用对象、cd、次数限制、经济限制等
-技能的发动时机可能在整局游戏开始前的准备阶段（例如：TSD的【晋升】），也可能在回合内（如【偏移】【数竞】等大部分主要技能），还有可能在回合外（如一些被动技能）。在发动条件成立时，被动技能立即发动，主动技能则由玩家决定是否发动。
+技能的发动时机可能在整局游戏开始前的准备阶段（例如：DXD的【晋升】），也可能在回合内（如【偏移】【数竞】等大部分主要技能），还有可能在回合外（如一些被动技能）。在发动条件成立时，被动技能立即发动，主动技能则由玩家决定是否发动。
 ##### 3.2.2 作用效果
 一般地，一个技能的作用效果可以分为以下几类：伤害类、医疗类、属性类、位移类、特效类等。
 伤害类是指直接扣除作用对象的HP，同时又分为点对点（如：【偏移】）、点对面（如：【次声】）两类。
@@ -100,17 +101,20 @@
 其中， $\Delta 极值$ 的意思是技能发动者的极值减去作用对象的极值。
 示例：581在2步处偏移YL：
  $\text{伤害} = 4 \times (11-0) = 44$
+偏移倍数详见下文6.3中的偏移倍数表。
 ###### 3.3.4.2 数竞
 【数竞】是一些具有特殊“数学”关联的武将的特有的越视域技能。对于3步内的敌人，若敌人的数学属性满足一定条件（通常是强、中、弱），则可以扣除其一定值HP，参照下文中的数竞类型表。特别地，Al只因翔拥有【误导】技能，虽然和【数竞】的设计逻辑不同，但作用方法和效果相似，所以也归为【数竞】类别当中。
+数竞类别详见下文6.4中的数竞类型表。
 ###### 3.3.4.3 医疗
 【医疗】是可以恢复己方一名武将HP值的技能。将具有【医疗】技能或其他恢复HP功能的武将称为“医疗兵”。一般地，不同医疗兵的医疗触发条件不同，例如对作用对象的特定属性和身份有一定限制或区分。【医疗】不可以顶格加血，即不可以使得任何武将的HP超过其初始状态；若作用对象的HP与初始HP差值小于【医疗】技能使其HP增加的值，则将该作用对象加至满血（初始HP）。一般地，医疗技能全局限3次，无cd。
 ##### 3.3.5 具有特殊属性的技能
 部分技能可能具有特殊属性，如蒜的【蒜】技能可以放置【蒜】，HJK的技能可能导致其具有特殊的主武器等。这些技能可能改变初始规则，需要格外关注。
 ### 四 武器
-主武器包括M202、RPG、加特林。使用主武器时，武将和作用点必须站在连通的直线上，且消耗一定量的经济，造成一定范围的溅射。“溅射”是指当主武器（M202、RPG）击中作用点时，对与作用点**直接相连**的r<2的点上的武将（包括敌人和队友）都会造成较小的伤害。不要小看这些伤害，在一次战例中，QC凭借5Hp的溅射以一个回合的优势推倒了583把守的塔，获得胜利。
-M202是“四联火箭筒”，可以进行对某个点的爆炸伤害（即作用点上的所有武将均会受伤），适合打击中远距离目标。BM配M202几乎无解。制备需要2经济，每次开火需要2经济。会造成较大溅射。
-RPG是M202的平替，可以进行对某个点的爆炸伤害，打击中距离目标性价比极高。医疗兵或者辅助型武将适合拿这一类武器。制备需要1经济，每次开火需要1经济。会造成较小溅射。
-加特林是机枪，只能进行一对一伤害，打击近距离或贴脸敌人威力极大，且极省经济。缺点是缺乏远程有效保护。一些坦克或者极强的机动兵，如YL、SJK或者thraa，非常适合配加特林。
++ 主武器包括M202、RPG、加特林。使用主武器时，武将和作用点必须站在连通的直线上，且消耗一定量的经济，造成一定范围的溅射。“溅射”是指当主武器（M202、RPG）击中作用点时，对与作用点**直接相连**的r<2的点上的武将（包括敌人和队友）都会造成较小的伤害。不要小看这些伤害，在一次战例中，QC凭借5Hp的溅射以一个回合的优势推倒了583把守的塔，获得胜利。
++ M202是“四联火箭筒”，可以进行对某个点的爆炸伤害（即作用点上的所有武将均会受伤），适合打击中远距离目标。BM配M202几乎无解。制备需要2经济，每次开火需要2经济。会造成较大溅射。
++ RPG是M202的平替，可以进行对某个点的爆炸伤害，打击中距离目标性价比极高。医疗兵或者辅助型武将适合拿这一类武器。制备需要1经济，每次开火需要1经济。会造成较小溅射。
++ 加特林是机枪，只能进行一对一伤害，打击近距离或贴脸敌人威力极大，且极省经济。缺点是缺乏远程有效保护。一些坦克或者极强的机动兵，如YL、SJK或者thraa，非常适合配加特林。
++ 具体参数，需要对照下文6.2中的武器参数表。
 ### 五 高阶操作
 >本部分是提升玩家游戏操作水平的指南。对于理解游戏规则而言，读者可以跳过这一部分。
 
