--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -118,6 +118,7 @@
 ### 五 高阶操作
 >本部分是提升玩家游戏操作水平的指南。对于理解游戏规则而言，读者可以跳过这一部分。
 
+高阶操作实时更新，[点我](https://github.com/BukSeong/58Glory/blob/main/high_level.md)。
 ### 六 参数对照表
 #### 6.1 武将-参数-技能表
 > 道路连通:指两点间有线连接
