五八荣耀游戏教程.md 定稿
从现在开始可以专心敲代码了。不过武将表还是需要更新一下的，比如Al只因翔和QC。

--- a/五八荣耀游戏教程.md
+++ b/五八荣耀游戏教程.md
@@ -1,10 +1,38 @@
 ### 零 绪论
->第零部分是纪念部分，只想了解游戏规则的读者可以跳过。
+>第零部分是纪念部分，只想了解游戏规则的读者可以跳过。不过，我们还是希望读者在了解完游戏规则后阅读这一部分，加深对这款游戏的理解。
 #### 0.1 创立与发展
-#### 0.2 游戏理念
-#### 0.3 传播范围与变式
-#### 0.4 历史意义
+不晚于2023年5月，唔叭荣耀的最古早的版本诞生了。当时，甘油三酯在5班极力打压各种小游戏，无论是我们开发的均值不等式斗兽棋还是小游戏之王开发的钢蹦台球都未能幸免于难。而我们这款游戏由于可以时刻掩藏在活页纸中，在历史的风霜中幸存了下来，并取得了不断的发展。
 
+最初版本的唔叭荣耀并不对称，地图是非常复杂的，最初的游戏机制甚至更偏向于CS（有安装C4的环节），武将的个数也及其有限，数值也不平衡。不过，由于我们天天玩这款游戏，数值得到了极大的优化。之后，不晚于2023年8月，最初的“九宫格3v3”版本的唔叭荣耀正式出现，形成了双方对称的地图范式。接着，我们开始在九宫格的四个角嵌套小四宫格，如今这张5v5地图的雏形就出现了。然后，我们发现3v3不能充分体现武将之间的协调配合，于是将地图改大，创造出了5v5模式；又在实践中逐步添加了铁路、中央区、塔区等规则，最终形成了今天的唔叭荣耀。在地图范式标准形成后，我们又多次尝试改版地图；但发现无论如何改版，都不能比拟这一款地图的游戏体验和平衡程度。
+
+唔叭荣耀成型至今，诞生过多种流派的打法。无论是初代版本之子“制导流”，以582和Yangtze为核心的“机动流”，以DXD和贾花为核心的“数学流”，以YR和SJK为核心的“坦克流”，还是以足球将和Office为核心的“位控流”，乃至随着版本更新才出现的QC“富裕流”，都是开发者和玩家在策略均衡调整中一次次博弈而诞生的结果。
+
+班内外人士对该游戏给予了高度评价。“芹菜侦探”曾说，这款游戏兼具许多不同游戏的优点，是一款很有特色的自走棋游戏。隔壁4班也参考我们的游戏，开发出了类似的游戏“血溅唔叭”。他们认为，我们游戏中的铁路系统是十分值得借鉴的。
+
+总之，我们不会忘记由[BukSeong](https://github.com/BukSeong)和[zju1229](https://github.com/zju1229)在高中最枯燥的“坐牢”期间，在一张张演草纸上开发出的“少年巨作”，也不会忘记玩家们对这款游戏发展与创新的卓著贡献。
+#### 0.2 游戏理念
+在实际操作武将攻城略地的过程中，玩家们纷纷总结出了许多游戏理念；其中有一部分是设计时便考虑到的，另一部分则是“无心插柳柳成荫”，由玩家们探索发现的。以下是一些被总结出来的游戏理念：
+##### 0.2.1 塔防游戏，推塔才是王道
+显然，干掉五个武将的难度要比干掉两个不会反击的塔困难得多。要想取得胜利，必须想办法找到对方防线的突破，而不要在中央区恋战。不过，也不能硬着头皮乱莽，因为开局期间双方的防守都会很严密。
+##### 0.2.2 存人失地，人地皆存
+这一条看似和上一条有矛盾，实则不然。这句话尤其是指防守一方在处于劣势时要保持冷静，优先歼灭敌人主要火力点，而不是被打得晕头转向，乃至忽视了策略。
+##### 0.2.3 经济基础决定上层建筑
+这一条是指，前期要保证对经济区及周边区域的控制，至少要扎一个点，否则对于大部分对M202要求较高的队伍而言，10个经济难以为继。而对于有QC的队伍而言，对于经济点的争夺可能直接决定战场胜负。
+##### 0.2.4 敌进我退，敌疲我扰
+一定要在走位上过关。我们的地图并不大，地形整体上也较为规则，这时善于游击、全攻全守的队伍便十分沾光。要善于利用机动兵或铁路，充分调动敌人的位置，从而达到突破防线、直捣黄龙的目的。
+#### 0.3 传播范围与变式
+唔叭荣耀问世以后，经过广泛传播，其中最典型的是四班的“血溅唔叭”。不过他们的游戏和我们的理念差别比较大。他们的游戏更像“皇室战争”，而非我们这样的二维自走棋。
+唔叭荣耀自身也出现过很多变式。例如曾经出现过新的主武器（AK和榴弹炮），但是因为游戏机制太复杂而取消了。
+#### 0.4 历史意义
+唔叭荣耀的历史意义也许并不在于点击率有多高，玩的人有多多等等；我也不想和奖学金答辩那样，硬扯自己在开发过程中学到了这样那样的专业技能。在衡水模式的地狱副本中，在甘油三酯倾尽全力却又无可奈何的高压政策之下，我们的创意并没有被泯灭，我们的热情并没有被驱散；而在今天，我们已经从那张画成九宫格的校园里走出，这个游戏，便成为我们来过的证据。
+> **有时，存在本身，便是最大的意义。**
+
+#### 0.5 再次鸣谢
+以下排名不分先后：
++ 开发者：[BukSeong](https://github.com/BukSeong)、[zju1229](https://github.com/zju1229)
++ 探索者：HJK、芹菜侦探、崔只因、WJK
++ 武将表里的每一个原型
++ 愿意支持唔叭荣耀精神的全体唔叭人
 ### 一 流程
 #### 1.1 游戏开始
 当玩家准备好地图后，游戏开始。游戏开始到第一回合开始进行之间的阶段称作“准备阶段”。
@@ -121,7 +149,6 @@
 高阶操作实时更新，[点我](https://github.com/BukSeong/58Glory/blob/main/high_level.md)。
 ### 六 参数对照表
 #### 6.1 武将-参数-技能表
-> 道路连通:指两点间有线连接
 - ↓表1 武将-参数-技能表↓
 - 
 |武将|HP|极值|数学|班级/身份|技能|
@@ -167,6 +194,8 @@
 |Al只因翔's 误导|-10|-20|-30|-0|-0|
 
 ### 七 游戏用语对照表
+> 以下内容更新可能不及时，请勿过度依赖这里的内容。
+
 |游戏社群黑话|原来的名词或解释|
 |---|---|
 |极值点|可能指代有【偏移】技能的武将，也可能指代“经济”|
